--- a/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Views/Account/Register.cshtml
+++ b/src/Services/Insightify.IdentityAPI/Insightify.IdentityAPI/Views/Account/Register.cshtml
@@ -37,7 +37,7 @@
                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
                 <div class="field-container">
-                    <button id="login-submit" value="login" name="button" type="submit" class="btn">Sign In</button>
+                    <button id="login-submit" value="login" name="button" type="submit" class="btn">Sign Up</button>
                 </div>
                 <a asp-route-returnUrl="@ViewData["ReturnUrl"]" asp-action="Login" asp-controller="Account">Log In Instead</a>
             </form>
