--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/FinancialData/Dashboard.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/FinancialData/Dashboard.cshtml
@@ -67,14 +67,18 @@
     </section>
     <section class="chart-cards">
         <section class="price-cards">
+            <h5>24 Hour price data (in USD)</h5>
             <div id="price-card" class="price-card card">
             </div>
+            <h5>24 Hour market caps (in USD)</h5>
             <div id="change-card" class="change-card card">
             </div>
         </section>
         <section class="market-cards">
+            <h5>24 Hour total volumes (in USD)</h5>
             <div id="status-card" class="status-card card">
             </div>
+            <h5>24 Hour price data (in USD)</h5>
             <div id="analytics-card" class="analytics-card card">
             </div>
         </section>
