--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_ProfileMenuPartialView.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_ProfileMenuPartialView.cshtml
@@ -30,6 +30,7 @@
                 @*<a class="pfp-menu-actions-btn" href="#">Manage profile</a>
                 <a class="pfp-menu-actions-btn" href="#">Friend Requests</a>
                 <a class="pfp-menu-actions-btn" href="#">Neshto drugo</a>*@
+                <a class="pfp-menu-actions-btn" href="@Url.Action("Create", "Posts")">Create post</a>
                 <a href="@Url.Action("Signout", "Account")" class="pfp-menu-actions-btn">Log out</a>
             </div>
         </div>
