Fixed to use correct date.

--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/News/News.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/News/News.cshtml
@@ -14,7 +14,7 @@
                             <div class="news-header-hour">
                                 <h1 class="news-headerhour-title">@item.Author</h1>
                                 <h1><strong>‧</strong></h1>
-                                <h1 class="news-headerhour-text">@item.CreatedDateTime</h1>
+                                <h1 class="news-headerhour-text">@item.PublishedAt</h1>
                             </div>
                             <div class="news-content">
                                 <h1 class="news-content-title">@item.Description</h1>
@@ -86,7 +86,7 @@
                                             <div class="news-header-hour">
                                                 <h1 class="news-headerhour-title">${item.author}</h1>
                                                 <h1><strong>‧</strong></h1>
-                                                <h1 class="news-headerhour-text">${item.createdDateTime}</h1>
+                                                    <h1 class="news-headerhour-text">${item.publishedAt}</h1>
                                             </div>
                                             <div class="news-content">
                                                 <h1 class="news-content-title">${item.description}</h1>
