--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Posts/Feed.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Posts/Feed.cshtml
@@ -27,7 +27,7 @@
                                 </div>
                             </div>
                             <div class="post-header-buttons">
-                                <a class="follow-btn">1 hour ago</a>
+                                <a class="follow-btn">@post.UploadDate</a>
                             </div>
                         </header>
                         <div class="post-content">
@@ -130,7 +130,7 @@
                                         </div>
                                         <div class="post-header-hour">
                                             <h1><strong>‧</strong></h1>
-                                            <h1 class="headerhour-text">2 hr. ago</h1>
+                                            <h1 class="headerhour-text">${post.uploadDate}</h1>
                                         </div>
                                     </div>
                                     <div class="post-header-buttons">
