Created a View post page with its design

--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
@@ -17,6 +17,9 @@
     <link href="~/css/feed.css" rel="stylesheet" />
     <link href="~/css/create-post.css" rel="stylesheet" />
     <link href="~/css/cryptomarket.css" rel="stylesheet" />
+    <link href="~/css/view-post-page.css" rel="stylesheet">
+    <link href="~/css/reset.css" rel="stylesheet">
+    <link href="~/css/btn-animation.css" rel="stylesheet">
 </head>
 <body>
     <partial name="_NavbarPartialView" />
