--- a/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/view-post-page.css
+++ b/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/view-post-page.css
@@ -1,4 +1,4 @@
-.post-header {
+/*.post-header {
     display: flex;
     align-items: center;
     align-items: center;
@@ -34,7 +34,7 @@
 .title-content-header {
     font-size: 30px;
 }
-
+*/
 .follow-bth {
     background-color: black;
     border-radius: 20px;
